# wakatimex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.en.md  README.md  THIRD_PARTY_NOTICES.md  build.sh  compose.single.yaml  compose.yaml  docker-compose.dev.yaml  export-db.sh  hatch.toml  mypy.ini  plan.md  pyproject.toml  wakatime_stats_probe.py
ddl/: init.sql
migrations/: add_ai_fields.sql  add_project_mapping_table.sql  create_user_agent_table.sql
src/wakatime_sync/: __init__.py  main.py
src/wakatime_sync/biz/api/: routes.py  schemas.py
src/wakatime_sync/biz/stats/: service.py
src/wakatime_sync/biz/sync/: service.py
src/wakatime_sync/biz/wakatime/: __init__.py  client.py
src/wakatime_sync/sys/: __init__.py  config.py  db.py  logging.py  scheduler.py  version.py
src/wakatime_sync/web/: __init__.py  chart.html  index-mobile.html  index.html  project-mappings.html
src/wakatime_sync/web/assets/: app.js  home-mobile.css  styles.css
